--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,37 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Run current",
+            "program": "${workspaceFolder}/${file}",
+            "cwd": "${workspaceFolder}",
+            "request": "launch",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "node"
+        },
+        {
             "type": "node",
             "request": "launch",
             "name": "run 1",
             "skipFiles": [
                 "<node_internals>/**"
             ],
+            "cwd": "${workspaceFolder}",
             "program": "${workspaceFolder}/1.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "run 2",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "cwd": "${workspaceFolder}",
+            "program": "${workspaceFolder}/2.js",
+            //"console": "internalConsole",
+            //"console": "integratedTerminal",
+            //"outputCapture": "std"
         }
     ]
 }
